# shake-install

./: .gitignore  .travis.yml  LICENSE  README.md  shake-install.cabal  shake.hs
Development/Shake/Install/: BuildDictionary.hs  BuildTree.hs  Cabal.hs  CabalCustom.hs  CabalSimple.hs  Exceptions.hs  GetBuildType.hs  PackageDescription.hs  PersistedEnvironment.hs  RequestResponse.hs  Rules.hs  ShakeMode.hs  Utils.hs
