Name:                shake-install
Version:             0.1
Synopsis:            Build a set of cabal packages in the correct order
-- Description:         
Homepage:            https://github.com/alphaHeavy/shake-install
License:             BSD3
License-file:        LICENSE
Author:              Nathan Howell
Maintainer:          nhowell@alphaheavy.com
Copyright:           Alpha Heavy Industries
Category:            Distribution
Build-type:          Simple

Cabal-version:       >=1.10

Executable shake
  Default-Language:  Haskell2010
  Main-is:           shake.hs
  GHC-Options:       -Wall -threaded -rtsopts "-with-rtsopts=-qg1 -A2m -N"

  Build-depends:     base         >= 4.4 && < 5,
                     binary       == 0.5.*,
                     Cabal        == 1.14.*,
                     cmdargs      == 0.9.*,
                     containers   == 0.4.*,
                     deepseq      == 1.3.*,
                     directory    == 1.1.*,
                     filepath     == 1.3.*,
                     hashable     == 1.1.*,
                     process      == 1.1.*,
                     shake        >= 0.2.8 && < 0.3,
                     uniplate     == 1.6.*,
                     unix         == 2.5.*
  
  Other-modules:     Development.Shake.Install.BuildDictionary
                     Development.Shake.Install.BuildTree
                     Development.Shake.Install.Cabal
                     Development.Shake.Install.CabalCustom
                     Development.Shake.Install.CabalSimple
                     Development.Shake.Install.Exceptions
                     Development.Shake.Install.GetBuildType
                     Development.Shake.Install.PersistedEnvironment
                     Development.Shake.Install.RequestResponse
                     Development.Shake.Install.Rules
                     Development.Shake.Install.ShakeMode
                     Development.Shake.Install.Utils

